// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/DatabaseRole/Modal/RoleDetail render close modal 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right"
      tabindex="-1"
    >
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper ant-drawer-content-wrapper-hidden"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-rva8cb"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  角色详情
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      角色信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          角色名
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            -
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          数据源
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <a
                              href="/project//db-services?name=oracle-1"
                              target="_blank"
                            >
                              oracle-1
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      数据权限
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          角色
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            -
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          权限
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            -
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`page/DatabaseRole/Modal/RoleDetail render init snap 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-rva8cb"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  角色详情
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      角色信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          角色名
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            role1
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          数据源
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <a
                              href="/project//db-services?name=oracle-1"
                              target="_blank"
                            >
                              oracle-1
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      数据权限
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          角色
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px; padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                              style="max-width: 190px;"
                            >
                              <div
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
                              >
                                role1_child_1
                              </div>
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                              style="max-width: 190px;"
                            >
                              <div
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
                              >
                                role1_child_2
                              </div>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-13u4jk2"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          权限
                        </div>
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px; padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                              style="max-width: 190px;"
                            >
                              <div
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
                              >
                                ALL ON database-1.table-1
                              </div>
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb"
                              style="max-width: 190px;"
                            >
                              <div
                                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line basic-typography-ellipsis css-wgj5gs"
                              >
                                CREATE_USER
                              </div>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <button
                class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
